allow all service accounts in my project.
Signed-off-by: Ville Aikas <vaikas@chainguard.dev>

--- a/.github/chainguard/vaikas.sts.yaml
+++ b/.github/chainguard/vaikas.sts.yaml
@@ -1,6 +1,9 @@
 issuer: https://accounts.google.com
+subject_pattern: '[0-9]+'
+claim_pattern:
+  email: '.*@vaikas-chainguard\.iam\.gserviceaccount\.com'
 # grypedb-3z1y-dlv@vaikas-chainguard.iam.gserviceaccount.com
-subject: 110743266410577433854
+#subject: 110743266410577433854
 
 permissions:
   contents: read
